# fluvio

./: Cargo.toml
.github/workflows/: hourly.yml
crates/fluvio-dataplane-protocol/src/: record.rs
crates/fluvio-extractors/: Cargo.toml  README.md
crates/fluvio-extractors/src/: bytes.rs  lib.rs  record.rs  serde.rs  string.rs  traits.rs
crates/fluvio-extractors/src/serde/: json.rs  mod.rs  toml.rs  yaml.rs
crates/fluvio-smartengine/src/: engine.rs  metrics.rs
crates/fluvio-smartmodule/: Cargo.toml
crates/fluvio-smartmodule-derive/src/generator/: aggregate.rs  array_map.rs  filter.rs  filter_map.rs  map.rs
crates/fluvio-smartmodule/examples/aggregate-average/src/: lib.rs
crates/fluvio-smartmodule/examples/aggregate-json/src/: lib.rs
crates/fluvio-smartmodule/examples/aggregate-sum/src/: lib.rs
crates/fluvio-smartmodule/examples/aggregate/src/: lib.rs
crates/fluvio-smartmodule/examples/array_map_json_array/src/: lib.rs
crates/fluvio-smartmodule/examples/array_map_json_object/src/: lib.rs
crates/fluvio-smartmodule/examples/array_map_json_reddit/src/: lib.rs
crates/fluvio-smartmodule/examples/filter_json/src/: lib.rs
crates/fluvio-smartmodule/examples/filter_odd/src/: lib.rs
crates/fluvio-smartmodule/examples/filter_regex/src/: lib.rs
crates/fluvio-smartmodule/examples/filter_with_parameters/src/: lib.rs
crates/fluvio-smartmodule/examples/map/src/: lib.rs
crates/fluvio-smartmodule/examples/map_double/src/: lib.rs
crates/fluvio-smartmodule/src/: lib.rs
crates/fluvio-spu/: Cargo.toml
crates/fluvio-spu/src/: lib.rs
(+4 files in other folders)
