[package]
name = "fluvio-extractors"
version = "0.1.0"
edition = "2018"

[features]
default = ["serde_json", "serde_yaml", "toml"]

[dependencies]
thiserror = "1"
eyre = "0.6"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
serde_yaml = { version = "0.8", optional = true }
toml = { version = "0.5", optional = true }
fluvio-dataplane-protocol = { version = "0.9", path = "../fluvio-dataplane-protocol" }
